apps/example-python-test-3/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-python-test-3
  namespace: qa
  labels:
    app: example-python-test-3
    backstage.io/kubernetes-id: example-python-test-3
    environment: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-python-test-3
  template:
    metadata:
      labels:
        app: example-python-test-3
        backstage.io/kubernetes-id: example-python-test-3
        environment: qa
    spec:
      containers:
        - name: example-python-test-3
          image: jaykumark7/example-python-test-3:1.0.3
          ports:
            - containerPort: 5000
