apps/example-python-test-3/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-python-test-3
  namespace: qa
  labels:
    backstage.io/kubernetes-id: example-python-test-3
    environment: qa
spec:
  selector:
    app: example-python-test-3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-python-test-3-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: example-python-test-3.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: example-python-test-3
#             port:
#               number: 80
